--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "slowlyo/slow-module-notice",
+    "name": "slowlyo/owl-module-notice",
     "alias": "通知公告管理",
-    "description": "SlowAdmin 扩展: 后台功能-通知公告管理",
+    "description": "OwlAdmin 扩展: 后台功能-通知公告管理",
     "type": "library",
-    "keywords": ["slow-admin", "extension", "notice"],
+    "keywords": ["owl-admin", "extension", "notice"],
     "homepage": "https://gitee.com/slowlyo/notice",
     "license": "MIT",
     "authors": [
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=8.0",
-        "slowlyo/slow-admin": "*"
+        "slowlyo/owl-admin": "*"
     },
     "autoload": {
         "psr-4": {
@@ -22,7 +22,7 @@
         }
     },
     "extra": {
-        "slow-admin": "Slowlyo\\Notice\\NoticeServiceProvider",
+        "owl-admin": "Slowlyo\\Notice\\NoticeServiceProvider",
         "laravel": {
             "providers": [
                 "Slowlyo\\Notice\\NoticeServiceProvider"
